# python_bootcamp

advent_of_code/Day 01/: part1.py  part2.py
advent_of_code/Day 02/: part1.py  part2.py
advent_of_code/Day 03/: part1.py
advent_of_code/Day 04/: part1.py  pyproject.toml  pytest.ini
advent_of_code/Day 04/pysrc/scratch/: part1.py  part2.py
advent_of_code/Day 04/tests/: test_scorepart1.py
band_name_gen/: main.py
blackjack/: blackjack.py
blind_auction/: blind_autcion.py
caesar_cipher/: caesar_cipher.py
calculator/: calculator.py
coffee_machine/: coffee_machine.py
coffee_oop/: main.py
guess_the_number/: guess_the_num.py
hangman/: main.py
higher_or_lower/: higher_or_lower.py
other/: two_sum.py
password_generator/: main.py
prep_hashmaps/: anagram.py  can_be_pal.py  count_chars.py  first_occ.py  html.py  print_unique.py  unique_sum.py  zero_sum.py  zero_sum_fup.py
rock_paper_scissors/: main.py
tip_calc/: main.py
treasure_island/: main.py
