[tool.poetry]
name = "day04"
version = "0.1.0"
description = "scrathcards project for advent of code"
authors = ["Vova Shkonda vovbi4@gmail.com>"]
license = "MIT"
packages = [{ include = "scratch", from = "pysrc" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
